build: filters buttons's background color set to green when active

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -188,7 +188,7 @@ nav li img[alt="Instagram"] {
   padding: 0 12px;
 }
 
-.filter-btn:hover {
+.filter-btn.active {
   background-color: #1D6154;
   color: white;
 }
